chore: first commit

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cognito-ses-domain",
   "repository": {
     "type": "git",
-    "url": "https://github.com/pablo.cano/cognito-ses-domain.git"
+    "url": "https://github.com/pablocano/cognito-ses-domain.git"
   },
   "scripts": {
     "build": "npx projen build",
@@ -39,7 +39,7 @@
     "@types/node": "^24.3.0",
     "@typescript-eslint/eslint-plugin": "^8",
     "@typescript-eslint/parser": "^8",
-    "aws-cdk-lib": "2.1.0",
+    "aws-cdk-lib": "2.200.0",
     "commit-and-tag-version": "^12",
     "constructs": "10.0.5",
     "eslint": "^9",
@@ -53,13 +53,18 @@
     "jsii-pacmak": "^1.113.0",
     "jsii-rosetta": "~5.8.0",
     "projen": "^0.95.2",
+    "ses-cloudwatch": "1.2.0",
     "ts-jest": "^29.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   },
   "peerDependencies": {
-    "aws-cdk-lib": "^2.1.0",
-    "constructs": "^10.0.5"
+    "aws-cdk-lib": "^2.200.0",
+    "constructs": "^10.0.5",
+    "ses-cloudwatch": "^1.2.0"
+  },
+  "dependencies": {
+    "ses-cloudwatch": "^1.2.0"
   },
   "keywords": [
     "cdk"
