chore: enable the python build

--- a/examples/typescript/.gitignore
+++ b/examples/typescript/.gitignore
@@ -26,3 +26,6 @@ yarn-error.log*
 # Temporary files
 .tmp/
 .cache/
+
+# The example does not use projen. So commit the tsconfig.json
+!tsconfig.json
